# hyperskill-python-portfolio

./: .editorconfig  .gitattributes  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/: dependabot.yaml
.github/instructions/: python-logging.instructions.md
.github/workflows/: ci.yaml  ci.yml  docs.yaml  docs.yml  publish.yaml  pycharm-inspections.yaml  release.yaml  release.yml
billsplitter/: billsplitter.py
chatbot/chatbot/: bot.py  main.py
docs/: .pages  Pre-Commit_Hooks.md  gen_ref_pages.py  index.md
docs/projects/: .pages  coffee_machine.md  honest_calculator.md
hangman/hangman/: game.py  hangman.py  io_utils.py  main.py  models.py
hangman/tests/: test_hangman_session.py
projects/coffee_machine/: index.html
projects/honest_calculator/: index.html
reference/billsplitter/: index.html
reference/cconverter/: index.html
reference/chatbot/: index.html
reference/coffeemachine/: index.html
reference/hangman/: index.html
reference/honestcalc/: index.html
reference/loancalc/: index.html
reference/rps/: index.html
reference/zookeeper/: index.html
scripts/: format_mi.jq  runner.py
search/: search_index.json
src/billsplitter/: __init__.py  main.py
src/chatbot/: bot.py  main.py
src/corner_shop_calculator/: main.py
src/hangman/: README.md  __init__.py  game.py  main.py  models.py
src/hyperskill_python_portfolio/: __init__.py
src/hyperskill_python_portfolio/billsplitter/: main.py
src/hyperskill_python_portfolio/chatbot/: __init__.py  bot.py  main.py
src/hyperskill_python_portfolio/coffee_machine/: __init__.py  machine.py  main.py  models.py
src/hyperskill_python_portfolio/currency_converter/: __init__.py  cconverter.py  main.py
src/hyperskill_python_portfolio/hangman/: game.py  io_utils.py  main.py  models.py
src/hyperskill_python_portfolio/honest_calculator/: __init__.py  main.py
src/hyperskill_python_portfolio/loancalc/: cli.py  core.py  handlers.py  main.py  models.py
src/hyperskill_python_portfolio/rps/: README.md  __init__.py  file_handler.py  game_logic.py  main.py
src/hyperskill_python_portfolio/zookeeper/: art.py  main.py
src/loancalc/: README.md  __init__.py  cli.py  core.py  handlers.py  main.py  models.py
src/rpc/: game_logic.py
src/rps/: file_handler.py  game_logic.py  main.py
src/zookeeper/: __init__.py  art.py  main.py
tests/billsplitter/: test_billsplitter.py  test_main.py
tests/coffee_machine/: test_machine.py
tests/hangman/: test_hangman_session.py
tests/honest_calculator/: test_honest_calculator.py  test_main.py
tests/loancalc/: test_core.py  test_handlers.py
tests/rps/: draft.py  test_game_logic.py
